app.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;200;300;400;500;600;700;800;900&display=swap');

/* RESET */

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a{
  text-decoration: none;
  color: currentColor;
}

li, ul, menu{
  list-style: none;
}

.row{
  display: flex;
}

/* DEBUG */

/* UIILITIES */

body{
  font-family: 'Noto Sans HK', sans-serif;
}


.btn-sm{
  line-height: 36px;
  padding: 7px 14px;
  background-color: #0061ff;
  color: white;
}


.btn-lg{
  line-height: 47px;
  padding: 12px 16px;
  background-color: #0061ff;
  color: white;
}

.btn-card{
  line-height: 41px;
  padding: 1px 0px;
  background-color: #0061ff;
  color: white;
  text-align: center;
}

.col-4{
  width: calc(4 * 100% / 12);
}

.col-8{
  width: calc(8 * 100% / 12);
}

/* LAYOUT */

.container-lg{
  width: 100%;
}

.container{
  max-width: 1200px;
  margin: 0 auto;
}

.container-sm{
  max-width: 1040px;
  margin: 0 auto;
}

/* ricordarsi di aggiungere 20px di padding alle cards */

/* header */

header{
  padding: 20px;
}

header .row{
justify-content: space-between;
}

header .row > ul{
  display: flex;
  align-items: center;
  gap: 40px;
}

.logo-menu .row{
  justify-content: center;
}

.active-menu .row{
  justify-content: center;
}

/* hero */

.hero{
  background-color: #B4D0E7;
}

.hero h1{
  font-size: 77px;
  padding: 55px 0 36px 0;
}

.hero-text{
  flex-direction: column;
  gap: 36px;
}

.hero-text i{
  margin-top: auto;
  font-size: 45px;
}

.hero img{
  max-width: 100%;
}

/* plans */

.plans .container-sm{
  padding: 20px 0;
}

.plans .container-sm:first-child{
  padding: 20px 20px;
}

h2.section-title{
  font-size: 40px;
  font-weight: 900;
  margin-bottom: 70px;
}

section.plans{
  padding-top: 120px;
}

.bill_monthly{
  margin-right: 45px;
}

.plans .row > .col-4{
  padding: 0 20px;
}

.plans_card{
  border: 1px solid #EDEDEE;
}

.card-header{
  border: 1px solid #EDEDEE;
  text-align: center;
  line-height: 20px;
  padding: 10px 0;
}

.plans_card i{
  margin-right: 10px;
}

/* card-main */

.card-main{
  padding: 40px 32px;
}

.card-main_title{
  margin-bottom: 60px;
}

.card-main_title h3, .card-main_title h5{
  margin-bottom: 1em;
}

.card-main_title h6{
  color: #b1b1b1;
  font-size: 17px;
  font-weight: 300;
}

ul.card-main_list{
  margin-bottom: 60px;
}

.card-main_list li:not(:last-child){
  margin-bottom: 2em;
}

.card-main_call-to-a > *{
  margin-bottom: 37px;
  display: block;
}

.card-main_call-to-a hr{
  width: 20%;
}

.card-main_call-to-a p > a{
  text-decoration: underline;
  color: #0061FF;
}

.plans li{
  font-size: 15px;
}

.plans p{
  font-size: 15px;
}

.card-main_bottom i{
  color: #0061FF;
  margin: 0;
}

.card-main_bottom h4{
  margin-bottom: 40px;
}

.card-main_bottom {
  --fa-li-margin: 2em;
}

.fa-ul li {
  margin-bottom: 37px;
}

